feat: v0.3.0 final polish (parity, perf, fuzzing)

--- a/docs/v0.3-spec.md
+++ b/docs/v0.3-spec.md
@@ -18,8 +18,19 @@
     *   *SIMD is een optionele, experimentele bonus.*
 
 3.  **Robustness**:
-    *   Crash/UB-fuzzing om memory safety en panic-vrij gedrag te bewaken.
-    *   Differential testing tegen `tiktoken` via een vaste corpus.
+    ## Fuzzing
+- **Crash Fuzzing**: Verify no panic on random byte sequences.
+- **Differential Fuzzing**: Compare output against `tiktoken` (via bridge or corpus) for valid UTF-8.
+
+## Safety & Reliability
+### Invalid UTF-8
+The tokenizer MUST NEVER crash on invalid UTF-8 input (fuzzing requirement).
+- **Strategy**: Use `SafeUtf8Iterator` (or safe primitives) that treats invalid bytes as fallback tokens or standard replacement characters, rather than panicking.
+- **Parity**: Strict parity with `tiktoken` is NOT required for invalid UTF-8, but functional stability is mandatory.
+
+### Memory Safety
+- **Bounds Checking**: All buffer accesses must be bounds-checked (Zig default).
+- **Allocations**: Minimise heap allocations. Prefer `FixedBufferAllocator` or stack buffers where possible.
 
 4.  **Supply-chain**:
     Hardening blijft op v0.2-niveau (SBOM + signing); SLSA/provenance is optioneel.
