--- a/docs/v0.3-spec.md
+++ b/docs/v0.3-spec.md
@@ -1,144 +1,309 @@
-# v0.3 Technical Specification: Performance & Completeness
+# v0.3 Technical Specification & Roadmap
 
-**Status**: Draft
-**Target version**: v0.3
-**Release toolchain**: Zig 0.13.0 (core / CLI), optioneel Zig 0.14+ voor fuzz tooling
-**Context**: llm-cost is een standalone CLI voor LLM-token counting en kostenraming. v0.2 bracht o200k_base-parity-infrastructuur, streaming pipe-mode en parallel workers. v0.3 focust op correctness, performance en robustness.
+**Status**: v0.3 implemented (dev branch)
+**Release toolchain**: Zig 0.13.x (hard requirement for core/CLI)
+**Project**: `llm-cost` – offline token counting & cost estimation CLI
+
+---
 
 ## 0. Strategic Goals
 
-1.  **Strict correctness (parity)**:
-    Voor de ondersteunde OpenAI-modellen (`o200k_base` / `cl100k_base`) moet `llm-cost` dezelfde tokenisering geven als `tiktoken`, op geldige UTF-8 input, geverifieerd met een “Evil Corpus” en gerichte parity-tests.
+### 0.1 Core Principles
 
-2.  **Realistische performance**:
-    Geen micro-optimisatie om de micro-optimisatie. Focus op:
-    *   Algoritmische efficiëntie (lineaire time, ook op “adversarial” input).
-    *   Cache-locality (platte datastructuren).
-    *   Allocatie-reductie.
-    *   *SIMD is een optionele, experimentele bonus.*
+1. **Strict correctness (parity)**
+   Voor de ondersteunde OpenAI-encodings (`o200k_base`, `cl100k_base`) moet `llm-cost` dezelfde token-ids produceren als `tiktoken`, voor geldige UTF-8 input. Dit wordt afgedekt door:
+   - Evil Corpus v2 (static JSONL)
+   - Parity test-harness (`zig build test-parity`)
 
-3.  **Robustness**:
-    ## Fuzzing
-- **Crash Fuzzing**: Verify no panic on random byte sequences.
-- **Differential Fuzzing**: Compare output against `tiktoken` (via bridge or corpus) for valid UTF-8.
+2. **Realistische performance**
+   Niet micro-optimaliseren om de micro-optimalisatie:
+   - Lineaire / log-lineaire tijd op normale én “adversarial” input.
+   - Heap-based BPE-merge i.p.v. O(N²).
+   - Acceptabele throughput op commodity hardware (tientallen MB/s).
 
-## Safety & Reliability
-### Invalid UTF-8
-The tokenizer MUST NEVER crash on invalid UTF-8 input (fuzzing requirement).
-- **Strategy**: Use `SafeUtf8Iterator` (or safe primitives) that treats invalid bytes as fallback tokens or standard replacement characters, rather than panicking.
-- **Parity**: Strict parity with `tiktoken` is NOT required for invalid UTF-8, but functional stability is mandatory.
+3. **Robustness & safety**
+   - Geen panics / UB op willekeurige bytes (inclusief invalid UTF-8).
+   - Fuzzing en Evil Corpus als continue veiligheidsnetten.
+   - Release pipeline met SBOM + signing.
 
-### Memory Safety
-- **Bounds Checking**: All buffer accesses must be bounds-checked (Zig default).
-- **Allocations**: Minimise heap allocations. Prefer `FixedBufferAllocator` or stack buffers where possible.
+4. **Multi-provider ready**
+   - OpenAI is de eerste klasse (o200k/cl100k), maar de architectuur moet voorbereiden op extra encodings (andere vendors, open-source modellen).
+   - Encodings worden via een registry en statische `EncodingSpec` aangestuurd; het systeem is voorbereid op extra vocab/bpe-binaries.
 
-4.  **Supply-chain**:
-    Hardening blijft op v0.2-niveau (SBOM + signing); SLSA/provenance is optioneel.
+5. **Duidelijke “accuracy tiers”**
+   - Niet alleen “werkt / werkt niet”, maar expliciet:
+     - **Exact**: bewezen parity met referentie-tokenizer.
+     - **Family**: benadering van een model-familie (bijv. “LLaMA-like”).
+     - **Heuristic**: fallback zonder harde garanties.
 
-## 1. Correctness & Completeness (o200k & cl100k)
+---
 
-### 1.1 Scope
-v0.3 richt zich op twee encodings:
-*   **o200k_base** (GPT-4o familie) – reeds aanwezig in v0.2 met dedicated scanner + BPE-engine.
-*   **cl100k_base** (GPT-4 familie) – wordt in v0.3 op volwaardige manier ondersteund (scanner + vocab + specials).
+## 1. Scope v0.3 – Implemented
 
-Voor beide geldt:
-*   Pre-tokenizer is model-specifiek.
-*   BPE-engine deelt dezelfde kern, maar gebruikt model-specifieke vocab/ranks/specials.
-*   Special tokens en `disallowed_special` gedrag moeten matchen met `tiktoken`.
+### 1.1 Encodings
 
-### 1.2 o200k whitespace scanning (strict behavior)
-Best-effort heuristiek uit v0.2 wordt in v0.3 vervangen door een strikt gedefinieerde scanner, met gedrag dat overeenkomt met de `tiktoken`-regex voor `o200k_base`.
+**Volledig ondersteund met parity:**
 
-#### 1.2.1 Branches 5–7 (Whitespace group)
-*   **Branch 5**: `\s*[\r\n]+`
-*   **Branch 6**: `\s+(?!\S)`
-*   **Branch 7**: `\s+`
+- `o200k_base` (GPT-4o familie)
+  - Dedicated scanner (`o200k_scanner.zig`).
+  - Fijne whitespace-regels (Branches 5–7) en contraction-suffixes.
+  - Parity verified via Evil Corpus v2.
 
-**Gedragsvoorbeelden (o200k)**:
-*   `" \n "` -> `[" \n", " "]`. Branch 5 matcht ` \n`. Branch 7 matcht ` `.
-*   `"\r\n\r\n"` -> `["\r\n\r\n"]`. Branch 5 matcht de hele run.
-*   `" \n\nx"` -> `[" \n\n", "x"]`. Branch 5 matcht ` \n\n`.
-*   `"x \n "` -> `["x", " \n", " "]`.
-*   `" \r\nx\n"` -> `[" \r\n", "x", "\n"]`.
+- `cl100k_base` (GPT-4 / GPT-3.5 / ada-002 familie)
+  - Dedicated scanner (`cl100k_scanner.zig`) met:
+    - Contractions (`'s`, `'t`, `'re`, …).
+    - Letters-only words.
+    - 1–3 digit number-chunks.
+    - Punctuation + newline-suffix.
+    - Whitespace-groepen 5–7.
+  - Vocab + specials in `src/data/cl100k_base.bin` + `registry.zig`.
+  - Parity verified via Evil Corpus v2.
 
-**CRLF-constraint**:
-`\r\n` en combinaties zoals `\r\n\n`, `\r\r\n` worden als één whitespace-run gezien in Branch 5, zolang er geen niet-whitespace karakter tussen zit. Geen splitting van CR/LF in aparte pre-tokens binnen één run.
+**Heuristische fallback:**
 
-#### 1.2.2 Implementatie: `o200k_scanner.zig`
-Scanner blijft een dedicated struct: `O200kScanner`. Geen generieke `Scanner(Config)` in v0.3.
-*   UTF-8 wordt via `std.unicode.Utf8Iterator` verwerkt.
-*   Voor cp < 128 wordt eerst een ASCII-fast-path gebruikt (bitsets).
-*   Priority: 1-2 (words), 3 (numbers), 4 (punctuation), 5-7 (whitespace).
-    *Whitespace branches (5-7) have the LOWEST priority in the state machine.*
+- Voor onbekende modellen of custom namen:
+  - Whitespace-based estimator.
+  - Duidelijk als “approximate” gemarkeerd.
 
-### 1.3 cl100k scanner
-#### 1.3.1 Bron van waarheid
-Regex-patterns en special-token definities worden direct uit de officiële `tiktoken` bron overgenomen.
+### 1.2 BPE Engine
 
-#### 1.3.2 Implementatie: `cl100k_scanner.zig`
-Nieuwe file: `src/tokenizer/cl100k_scanner.zig`.
-Struct `Cl100kScanner` met dezelfde interface als `O200kScanner`.
-**Gating**: `cl100k` wordt pas als volwaardig model in de CLI aangeboden (via `--model`) als vocab, scanner en specials allemaal groen licht hebben van de Evil Corpus tests.
+File: `src/tokenizer/bpe.zig`
 
-#### 1.3.3 Specials voor cl100k
-`EncodingSpec` voor cl100k wordt aangevuld met:
-*   vocab-data.
-*   special tokens (incl. end-of-text, FIM, chat specials).
-*   aliases.
+- **Zero-copy** BPE-engine:
+  - `BpeEngine.init` laadt `IndexEntry[]` + string blob uit embedded `.bin`.
+- **Two merge strategies**:
+  - `encodeWordNaive`: O(N²), maar alleen voor korte woorden (`len < 128`).
+  - `encodeWordHeap`: O(N log N), heap-based merge met doubly-linked nodes.
+- **Heap-based merge details**:
+  - `Node` struct (prev/next/offset/len/alive/gen).
+  - `Edge` struct met:
+    - `rank` (BPE-merge prioriteit)
+    - `left_pos` voor deterministische tie-break (links wint).
+    - generatie-velden (`left_gen`/`right_gen`) voor lazy invalidation.
+  - Priority queue (`std.PriorityQueue`) met custom compare-functie.
 
-### 1.4 Special tokens
-`engine.TokenizerConfig` blijft de bron voor special-beleid. Special tokens worden niet door BPE gemerged maar direct gemapt.
+**Resultaat v0.3:**
 
-## 2. Robustness: Testing & Fuzzing
+- `a * 4096` gaat van ~280ms → ~1.1ms (~250x sneller).
+- Emoji-runs schalen nu ook ~lineair.
 
-### 2.1 Testlagen
-1.  **Unit tests**: scanner/BPE/engine.
-2.  **Parity tests**: Evil Corpus + tiktoken-oracle.
-3.  **Crash/UB fuzzing**: ensure no panic / UB.
-4.  **Regression tests**: integratietests.
+---
 
-### 2.2 Evil Corpus v2 (Parity Audit)
-**Doel**: `llm-cost` == `tiktoken` op geldige UTF-8.
-**Script**: `tools/gen_evil_corpus.py` (Python, gepinned aan tiktoken-versie).
-**Output**: Static JSONL in `testdata/evil_corpus_v2.jsonl`.
-**Inhoud**:
-*   Boundary cases (empty, single char, max len).
-*   Unicode (emoji ZWJ/ZWNJ, RTL, diacritics).
-*   Whitespace/newline variaties.
-**Constraint**: Invalid UTF-8 (overlong sequences, lone surrogates, etc.) hoort **NIET** in Evil Corpus; deze cases gaan uitsluitend naar crash/UB-fuzzing.
-**CI**: `zig build test-parity`. Geen Python runtime in CI.
+## 2. Correctness & Parity
 
-### 2.3 Crash/UB fuzzing
-**Doel**: Geen panics, geen UB.
-**Target**: `engine.estimateTokens`.
-**Input**: Random bytes (valid + invalid).
-**Tooling**: `std.testing.fuzz` (Zig 0.14+ allowed). Dedicated fuzz workflow.
-**Scope**: Fuzz-harness en fuzz-build zijn **geen** onderdeel van de release-build; het is een aparte CI workflow die een eigen Zig-versie mag gebruiken.
-**Invariants**: Elke door fuzzing gevonden bug wordt gereproduceerd in een gerichte regression-test om de fix te borgen.
+### 2.1 Evil Corpus v2
 
-## 3. Performance: Realistic Optimization
+File: `testdata/evil_corpus_v2.jsonl`
+Generator: `tools/gen_evil_corpus.py`
 
-### 3.1 Benchmark-specificatie
-**Scenario A (Single-thread)**:
-*   `llm-cost pipe --model gpt-4o --field text --mode tokens --workers 1`
-*   Input: 100MB NDJSON.
-*   Target: >10x sneller dan v0.2 baseline.
+- Geëxtraheerd via Python `tiktoken` voor:
+  - `o200k_base`
+  - `cl100k_base`
+- Cases omvatten o.a.:
+  - Contractions: `"don't"`, `"I'll"`, `" 's"`, `"foo's"`.
+  - Unicode letters (accenten, niet-Latijnse scripts).
+  - Digits & number-chunks: `1`, `12`, `123`, `1234`, `1234567890`.
+  - Punctuation + slashes: `"!"`, `"..."`, `"////"`.
+  - Whitespace varianten: `"\n"`, `"\r\n"`, `" \n "`, `"\t\n"`.
+  - Lange runs: `"a"*100`, `"!"*100`.
 
-**Scenario B (Multi-thread)**:
-*   `--workers N` (N = aantal logische cores op testmachine).
-*   Metric: Scaling factor t.o.v. scenario A.
-*   Target: Aantoonbare scaling (geen regressie), geen hard MB/s target.
+**Eigenschappen:**
 
-### 3.2 Optimalisatieprioriteiten
-1.  **Datastructuren (High)**: Flatten BPE rank map (contiguous arrays, O(1) pointer chase).
-    *   **Doel**: Empirisch lineair gedrag op adversarial inputs (`a`*N, emoji-runs, etc.). Absolute worst-case guarantees minder belangrijk dan lineaire scaling in praktijk.
-2.  **Allocaties (High)**: Arenas, fixed buffers in hot loop.
-3.  **ASCII fast-path**: 128-bit bitsets.
-4.  **SIMD (Experimental)**: Alleen mergen als >20% speedup.
+- **Frozen**: corpus staat in git, wordt niet in CI hergegenereerd.
+- **Versioned**: bevat `tiktoken_version` zodat veranderingen traceerbaar zijn.
 
-## 4. Deliverables & Exit Criteria v0.3
-*   **Parity**: Evil Corpus tests groen voor o200k/cl100k.
-*   **Performance**: Scenario A >10x baseline (~9 MB/s).
-*   **Robustness**: Fuzz job draait stabiel.
-*   **Release**: Binaries, SBOM, Cosign signatures.
+### 2.2 Parity Harness
+
+File: `src/test/parity.zig`
+
+- Leest JSONL-corpus.
+- Voor elke entry:
+  - Zoekt de `EncodingSpec` in `registry.Registry`.
+  - Init `OpenAITokenizer`.
+  - Encodeert de `text` en vergelijkt `expected_ids`.
+- Modellen zonder vocab (hypothetisch) worden netjes geskipt.
+
+Command:
+
+```bash
+zig build test-parity
+```
+
+Exit-criteria v0.3:
+Geen mismatches op Evil Corpus v2 voor o200k_base en cl100k_base.
+
+## 3. Robustness & Fuzzing
+
+### 3.1 Crash/UB Fuzzing
+
+File: `src/fuzz_test.zig`
+
+Doel: geen panics, geen UB, stabiele error-handling.
+
+Fuzz-targets o.a.:
+- `OpenAITokenizer.count`
+- `engine.estimateTokens`
+
+Input:
+willekeurige byte-sequences (incl. invalid UTF-8).
+
+Veiligheid:
+Gebruik van `SafeUtf8Iterator` in scanners om invalid UTF-8 tolerant te verwerken (fallback op byte-per-byte in plaats van panic).
+
+Command:
+
+```bash
+zig build fuzz
+```
+
+(In CI als bounded sanity check: ~2000 iteraties per model.)
+
+### 3.2 Unit Tests
+
+Command:
+```bash
+zig build test
+```
+
+Dekken o.a.:
+- Scanner-whitespace (o200k & cl100k).
+- Contractions / Unicode cases.
+- BPE merge (naive vs heap parity).
+- Pipe CLI gedrag en foutpaden.
+
+## 4. Performance
+
+### 4.1 BPE Microbenchmark
+
+File: `src/bench/bench_bpe.zig`
+Command: `zig build bench-bpe`
+
+Scenario: o200k_base, lokale dev machine.
+
+**Worst-case scaling (ASCII):**
+
+| Input (N) | Time (ns) | Schatting | Opmerking |
+|---|---|---|---|
+| 1024 | 265,710 | ~0.26 ms | baseline |
+| 2048 | 555,614 | ~0.55 ms | ≈ 2.1x |
+| 4096 | 1,112,658 | ~1.1 ms | ≈ 2.0x (linear) |
+
+**Emoji-scaling (multi-byte):**
+
+| Input (N) | Time (ns) | Schatting | Opmerking |
+|---|---|---|---|
+| 1024 | 936,637 | ~0.93 ms | baseline |
+| 2048 | 1,548,297 | ~1.55 ms | ≈ 1.65x |
+| 4096 | 3,047,118 | ~3.0 ms | ≈ 1.96x |
+
+Conclusie v0.3:
+O(N²)-gedrag is verdwenen.
+Heap-merge levert lineaire / log-lineaire scaling voor stress-cases.
+
+### 4.2 End-to-End Pipeline (Indicatief)
+
+Scenario: `llm-cost pipe --model o200k_base`.
+
+| Dataset | Workers | Time | Throughput | Opmerking |
+|---|---|---|---|---|
+| 50MB realistic | 1 | 7.07s | 7.4 MB/s | baseline single-thread |
+| 50MB realistic | 10 | 0.71s | 74 MB/s | goede scaling |
+| 10MB a*512 | 10 | ~0.3s | ~35 MB/s | worst-case stress scenario |
+
+## 5. Integration & UX (Roadmap)
+
+### 5.1 CLI ergonomie
+
+**Roadmap v0.4:**
+
+- Modelnamen normaliseren:
+  - Ondersteun `--model openai/gpt-4o` naast `gpt-4o` (ruimte voor andere vendors).
+
+- Accuracy-tier in output:
+  - Extra veld in JSON output:
+  - `"accuracy": "exact" | "family" | "heuristic"`.
+
+- Samenvattende output:
+  - `--summary`: totals over hele stream (aantal regels, totale tokens, totale cost).
+
+### 5.2 Integratievoorbeelden
+
+**Roadmap v0.4/v0.5:**
+
+- Voorbeelden voor:
+  - GitHub Actions (pre-flight kostencheck).
+  - GitLab CI.
+  - Pre-commit hook om grote commits te annoteren met token/cost-informatie.
+
+- Optioneel:
+  - Een lichte `llm-cost serve` modus (lokale HTTP API) voor interne tooling.
+
+## 6. Multi-Encoding & Vendor Support (Roadmap)
+
+### 6.1 Encodings-laag uitbreiden
+
+Doel: `llm-cost` moet niet “OpenAI-only” zijn, maar OpenAI als eerste-klasse plus uitbreidbaar.
+
+**Roadmap v0.4/v0.5:**
+
+- **Extern vocab-formaat documenteren**:
+  - Input voor `tools/convert_vocab.zig` beschrijven (token → rank, specials).
+  - Helder maken hoe community eigen BPE/vocab kan toevoegen.
+
+- **Registry uitbreiden**:
+  - `EncodingSpec` blijft de kern.
+  - Mogelijkheid voor:
+    - extra ingebakken encodings (bijv. LLaMA/Mistral).
+    - optionele “encoding packs” buiten de hoofd-binary.
+
+- **Family-tier heuristiek**:
+  - Voor modellen zonder exacte vocab:
+    - encoding-type markeren (`llama-like`, `mistral-like`).
+    - fallback-tokenizer kiezen die beter past dan pure whitespace.
+
+### 6.2 Roadmap naar v0.4/v0.5
+
+**v0.3 (nu)**
+- Strict parity OpenAI (o200k_base / cl100k_base).
+- BPE O(N log N).
+- Evil Corpus v2 + fuzzing.
+- Release pipeline met SBOM + signing.
+
+**v0.4 – UX & Multi-provider-ready**
+- CLI-UX (modelnamen, accuracy tiers, summaries).
+- Documentatie voor custom vocab/encodings.
+- Eerste stap naar “family-tier” tokenizers.
+- CI-voorbeelden voor GitHub/GitLab.
+
+**v0.5 – Extra encodings & long-context**
+- Extra ingebouwde encodings (afhankelijk van vraag / ecosysteem).
+- Optimalisaties voor zeer lange contexten (100k+ tokens, GB-scale input).
+- Verdere integratie van real-world corpora in benchmarks.
+
+## 7. Exit Criteria v0.3
+
+Een release v0.3.0 is “done” als:
+
+**Tests & fuzzing**
+- `zig build test` → groen.
+- `zig build fuzz` → geen crashes/panics.
+- `zig build test-parity` → geen mismatches op Evil Corpus v2.
+
+**Performance**
+- `zig build bench-bpe` draait succesvol.
+- `a * 4096` < 2ms (indicatief, afhankelijk van hardware).
+- Doorvoer op realistische dataset in lijn met huidige metingen (±zelfde orde, geen grote regressies).
+
+**Release pipeline**
+- GitHub Actions Release workflow:
+  - bouwt alle binaries,
+  - genereert SBOM (CycloneDX via Syft),
+  - signeert binaries (Cosign keyless),
+  - voegt artifacts toe aan GitHub Release.
+
+**Documentatie**
+- README beschrijft:
+  - ondersteunde encodings,
+  - exact vs approx gedrag,
+  - basis-usage en release-verificatie.
+- Docs voor Evil Corpus, perf en release zijn up-to-date.
