chore: release v0.4.0 (registry v2, pipe summary, quota)

--- a/docs/v0.3-spec.md
+++ b/docs/v0.3-spec.md
@@ -307,3 +307,21 @@ Een release v0.3.0 is “done” als:
   - exact vs approx gedrag,
   - basis-usage en release-verificatie.
 - Docs voor Evil Corpus, perf en release zijn up-to-date.
+
+## 8. Immutable Invariants & Migration to v0.4
+
+### 8.1 Invariants (Do Not Break)
+As we move to v0.4, the following properties of the v0.3 core are **sacrosanct**:
+
+1.  **Parity**: `o200k_base` and `cl100k_base` output **must** remain bit-identical to `tiktoken` on `Evil Corpus v2`.
+2.  **Complexity**: BPE merge logic is $O(N \log N)$ (Heap-based). Naive $O(N^2)$ is purely for short-word fallback or legacy.
+3.  **Performance**: `zig build bench-bpe` worst-case (e.g. `a * 4096`) must stay < 2ms on reference hardware.
+4.  **Safety**: `zig build fuzz` must never panic, even with invalid UTF-8 or adversarial byte sequences.
+
+### 8.2 Migration Notes for v0.4
+Changes in v0.4 will be additive or architectural, preserving the core engine:
+
+- **Tokenizer Semantics**: The regex scanners and BPE split behavior will **not** change.
+- **CLI Contract**: Existing flags (like `--model gpt-4o`) will remain valid but may be aliased to new canonical names.
+- **Output**: JSON output will gain an `accuracy` field. Downstream consumers should tolerate extra fields.
+
